# DmpWorkflow

./: .gitignore  .project  .pydevproject  README.md  RELEASE_NOTES.md  requirements.txt  scriptDefaults.py  setup-local.sh  setup.cfg  setup.py  setup.sh
DmpWorkflow/: __init__.py
DmpWorkflow/config/: .gitignore  dampe.cfg  default.cfg  defaults.py  logger.py  pilot.yaml  settings.cfg
DmpWorkflow/core/: DmpJob.py  __init__.py  admin.py  auth.py  datacat.py  manage.py  models.py  views.py
DmpWorkflow/core/templates/: _forms.html  base.html
DmpWorkflow/core/templates/admin/: _forms.html  base.html  import.html  list.html
DmpWorkflow/core/templates/jobs/: detail.html  instanceDetail.html  list.html  plist.html
DmpWorkflow/core/templates/stats/: siteSummary.html
DmpWorkflow/hpc/: HTCondor.py  batch.py  condor.py  lsf.py  pbs.py  sge.py  slurm-cscs.py  slurm.old.py  slurm.py
DmpWorkflow/job/: DmpJob.py
DmpWorkflow/scripts/: aggregateJobs.py  createPilots.py  dampe_cli_configure.py  dampe_cli_create_new_job.py  dampe_cli_create_new_jobInstance.py  dampe_cli_fetch_new_jobs.py  dampe_cli_inspectInstance.py  dampe_cli_kill_jobInstance.py  dampe_cli_rollback_jobInstance.py  dampe_cli_run_watchdog.py  dampe_cli_update_alive_jobs.py  dampe_cli_update_job_status.py  dampe_execute_payload.py  datacatalog_cli.py  fetcher.py  jobCreate.py  jobs_summary_influxdb.py  monitorJobs.py  profile.py  reaper.py  removeDuplicates.py  rollBack.py  testDBperformance.py
DmpWorkflow/scripts/client/: dampe_execute_payload.py  datacatalog_cli.py  fetcher.py  jobCreate.py  updateJobsAlive.py
DmpWorkflow/scripts/server/: admin_helper.py  createPilots.py  profile.py  reaper.py  removeDuplicates.py  removeOrphans.py  testDBperformance.py
DmpWorkflow/test/: dampe-cli-fetch-new-jobs.py  dummyJob.xml  fill_database.py  helloWorld.xml  mcJob.xml
DmpWorkflow/utils/: copyWorkingDirectoryFromInstance.py  db_helpers.py  flask_helpers.py  logger.py  scriptDefaults.py  shell.py  tools.py
config/: dampe-localtest.cfg  default.cfg
core/: DmpJob.py  __init__.py  admin.py  auth.py  batch.py  lsf.py  manage.py  models.py  schema.py  scriptDefaults.py  shell.py  views.py
core/templates/: _forms.html  base.html
core/templates/admin/: base.html  detail.html  list.html
core/templates/jobInstances/: detail.html
core/templates/jobs/: detail.html  list.html
hpc/: batch.py  lsf.py  sge.py
html/templates/: base.html
html/templates/jobs/: detail.html  list.html
local_test/: job.json  payload  script.py
scripts/: dampe-cli-create-new-job.py  dampe-cli-create-new-jobInstance.py  dampe-cli-fetch-new-jobs.py  dampe-cli-update-alive-jobs.py  dampe-cli-update-job-status.py  dampe-execute-payload.py  dampe_cli_create_new_job.py  dampe_cli_create_new_jobInstance.py  dampe_cli_fetch_new_jobs.py  dampe_cli_update_job_status.py  dampe_execute_payload.py
test/: dampe-cli-fetch-new-jobs.py  fill_database.py  helloWorld.xml  mcJob.xml
utils/: flask-helpers.py  flask_helpers.py  scriptDefaults.py  shell.py  tools.py
