[metadata]
name = DmpWorkflow
summary = A set of basic utilities to define a RPC service, using things developed in the context of others
author = Stephan Zimmer (University of Geneva)
author-email = zimmer@cern.ch
description-file = README.md
license = BSD
classifier =
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
keywords = DampeWorkflow

[files]
packages = 
	DmpWorkflow

[entry_points]
console_scripts =
    dampe-cli-configure = DmpWorkflow.scripts.configure:main
    dampe-cli-create-new-job = DmpWorkflow.scripts.jobCreate:createJob
    dampe-cli-create-new-jobInstance = DmpWorkflow.scripts.jobCreate:createJobInstance
    dampe-cli-fetch-new-jobs = DmpWorkflow.scripts.fetcher:main
	dampe-cli-rollback-jobInstance = DmpWorkflow.scripts.rollBack:main
    dampe-cli-update-job-status = DmpWorkflow.scripts.jobStatus:main
	dampe-datacatalog = DmpWorkflow.scripts.datacatalog_cli:main
    ## server side scripts
    dampe-server-admin = DmpWorkflow.core.manage.system:main
	dampe-server-remove-duplicates = DmpWorkflow.scripts.removeDuplicates:main
	dampe-server-remove-orphans = DmpWorkflow.scripts.removeOrphans:main
	dampe-server-run-profiler = DmpWorkflow.scripts.profile:main
	dampe-server-monitor-jobs = DmpWorkflow.scripts.monitorJobs:main
	dampe-server-run-pilot-agent  = DmpWorkflow.scripts.createPilots:main
    ## ingest information to influx ##
	dampe-server-aggregate-to-influxdb = DmpWorkflow.scripts.jobs_summary_influxdb:main
