[metadata]
name = DmpWorkflow
summary = A set of basic utilities to define a RPC service, using things developed in the context of others
author = Stephan Zimmer (University of Geneva)
author-email = zimmer@cern.ch
description-file = README.md
license = BSD
classifier =
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
keywords = DampeWorkflow

[files]
packages = 
	DmpWorkflow

[entry_points]
console_scripts =
    dampe-cli-configure = DmpWorkflow.scripts.configure:main
    dampe-cli-create-new-job = DmpWorkflow.scripts.client.jobCreate:createJob
    dampe-cli-create-new-jobInstance = DmpWorkflow.scripts.client.jobCreate:createJobInstance
    dampe-cli-fetch-new-jobs = DmpWorkflow.scripts.client.fetcher:main
	dampe-cli-rollback-jobInstance = DmpWorkflow.scripts.client.rollBack:main
    dampe-cli-update-job-status = DmpWorkflow.scripts.client.jobStatus:main
	dampe-datacatalog = DmpWorkflow.scripts.client.datacatalog_cli:main
    ## server side scripts
    dampe-server-admin = DmpWorkflow.core.manage.system:main
	dampe-server-remove-duplicates = DmpWorkflow.scripts.server.removeDuplicates:main
	dampe-server-remove-orphans = DmpWorkflow.scripts.server.removeOrphans:main
	dampe-server-run-profiler = DmpWorkflow.scripts.server.profile:main
	dampe-server-monitor-jobs = DmpWorkflow.scripts.server.monitorJobs:main
	dampe-server-run-pilot-agent  = DmpWorkflow.scripts.server.createPilots:main
	dampe-server-run-reaper  = DmpWorkflow.scripts.server.reaper:main
    ## ingest information to influx ##
	dampe-server-aggregate-to-influxdb = DmpWorkflow.scripts.server.jobs_summary_influxdb:main
